udpate email template

--- a/emailtemplates/emailverified.html
+++ b/emailtemplates/emailverified.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Uptuned Shop</title>
+    <title>Welcome to Uptuned Site</title>
   </head>
   <body>
     <p>Hello {{email}},</p>
     <p>
-      Welcome to Uptuned Shop. A new online platform to purchase all your
+      Welcome to Uptuned Site. A new online platform to purchase all your
       musical instrument.
     </p>
     <p>Your email has been verified.</p>
     <p>Enjoy shopping with us.</p>
     <p>
-      Thank you for Signing Up with Uptuned Shop. We are here to offer you a
+      Thank you for Signing Up with Uptuned Site. We are here to offer you a
       great service.
     </p>
   </body>
